Bug 1405317 - When inserting trees of bookmarks, avoid updating the last modified date when marking annotations. r=mak

MozReview-Commit-ID: Ik8DKwtiXoM

--HG--
extra : rebase_source : 4e6f0b5b1778cd8b9355a35908baccd850d7c5ca